# fastapi_complete_course

./: .gitignore  README.md  pyproject.toml  requirements.txt
project_1/: books.py
project_2/: books2.py
project_3/TodoApp/: alembic.ini  database.py  main.py  models.py  schemas.py
project_3/TodoApp/alembic/: env.py
project_3/TodoApp/alembic/versions/: 648b9ee3e5fa_create_phone_number_for_user_column.py
project_3/TodoApp/core/: config.py  security.py
project_3/TodoApp/models/: todos_orm.py  users_orm.py
project_3/TodoApp/routers/: admin.py  auth.py  todos.py  users.py
project_3/TodoApp/schemas/: todos_schema.py  users.py
project_3/TodoApp/services/: user_service.py
project_3/TodoApp/test/: test_main.py  test_todos.py
project_3/TodoApp/test/api/: factories.py
