[project]
name = "fastapi-complete-course"
version = "0.0.1"
description = "Ein FastAPI-Kursprojekt"
authors = [
    { name = "Eric Roby" },
    { name = "Chad Darby" },
    { name = "David Holl", email = "dacovi@tuta.io" },
]
readme = "README.md"
requires-python = "3.11.2"

[project.urls]
course = "https://www.udemy.com/course/fastapi-the-complete-course/"
course_repo = "https://github.com/codingwithroby/fastapi-the-complete-course/"
